--- a/output/team.html
+++ b/output/team.html
@@ -14,29 +14,47 @@
         <div class="container">
             <div class="row"><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
-            <h5 class="card-header">Rob<br /><br />GM</h5>
+            <h5 class="card-header" style="background-image: linear-gradient(to bottom right, rgb(212, 0, 255), yellow);">Rob Pelinka<br /><br />GM</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 78700978</li>
-                <li class="list-group-item">Email Address: rob gmail</li>
-                <li class="list-group-item">Years Left On Contract: 4 years left</li>
+                <li class="list-group-item">ID: 56709</li>
+                <li class="list-group-item">Email Address: RobGM@Lakers.com</li>
+                <li class="list-group-item">Years Left On Contract: 4</li>
             </ul>
             </div>
         </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
-            <h5 class="card-header">Frank<br /><br />Coach</h5>
+            <h5 class="card-header">Frank Vogel<br /><br />Coach</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 4545</li>
-                <li class="list-group-item">Email Address: gmail frank</li>
-                <li class="list-group-item">GitHub: sfasf</li>
+                <li class="list-group-item">ID: 99854</li>
+                <li class="list-group-item">Email Address: coachvogel@Lakers.com</li>
+                <li class="list-group-item">Years Left On Contract: 2</li>
             </ul>
             </div>
         </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
-            <h5 class="card-header">LEbron<br /><br />GM</h5>
+            <h5 class="card-header">Lebron James<br /><br />GM</h5>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">ID: 6</li>
-                <li class="list-group-item">Email Address: lebrongmail</li>
-                <li class="list-group-item">Years Left On Contract: 24242</li>
+                <li class="list-group-item">Email Address: kingjames@lakers.com</li>
+                <li class="list-group-item">Years Left On Contract: 2</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Anthony Davis<br /><br />GM</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 3</li>
+                <li class="list-group-item">Email Address: thebrow@Lakers.com</li>
+                <li class="list-group-item">Years Left On Contract: 4</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Russell Westbrook<br /><br />GM</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 0</li>
+                <li class="list-group-item">Email Address: westbrook0@Lakers.com</li>
+                <li class="list-group-item">Years Left On Contract: 1</li>
             </ul>
             </div>
         </div> </div>
